<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/Login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/name_login_and_user"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/user_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Login"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="75dp"
        android:text="@string/user"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#FF03DAC5" />

    <EditText
        android:id="@+id/edit_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/user_text"
        android:layout_marginStart="71dp"
        android:layout_marginLeft="71dp"
        android:layout_marginBottom="1dp"
        android:layout_toEndOf="@+id/user_text"
        android:layout_toRightOf="@+id/user_text"
        android:hint="@string/user_login"
        android:textSize="16sp"
        android:textColorHint="@color/white"
        android:autofillHints="username"
        android:inputType="textImeMultiLine"
        android:textColor="@color/white">

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/password_text"
        android:layout_width="124dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/user_text"
        android:layout_alignStart="@+id/user_text"
        android:layout_alignLeft="@+id/user_text"
        android:layout_marginStart="1dp"
        android:layout_marginLeft="1dp"
        android:layout_marginTop="39dp"
        android:text="@string/user_password"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#FF03DAC5" />

    <EditText
        android:id="@+id/edit_password"
        android:layout_width="wrap_content"
        android:layout_height="41dp"
        android:layout_below="@+id/edit_user"
        android:layout_alignBottom="@+id/password_text"
        android:layout_marginStart="207dp"
        android:layout_marginLeft="-73dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="-1dp"
        android:layout_marginBottom="-1dp"
        android:hint="@string/user_password1"
        android:textSize="16sp"
        android:textColorHint="@color/white"
        android:autofillHints="password"
        android:inputType="textPassword"
        android:textColor="@color/white"/>

    <Button
        android:id="@+id/button_login"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="105dp"
        android:layout_marginTop="286dp"
        android:layout_marginEnd="106dp"
        android:layout_marginBottom="394dp"
        android:text="@string/bt_allow"
        android:textColor="@android:color/background_light"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.6"
        android:layout_marginRight="106dp"
        android:layout_marginLeft="105dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentLeft="true" />

    <TextView
        android:id="@+id/number_of_attempts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/user_text"
        android:visibility="invisible"
        android:layout_alignEnd="@+id/user_text"
        android:textColor="@color/white"/>

    <TextView
        android:id="@+id/login_locked"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="321dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:visibility="invisible"
        android:gravity="center"
        android:layout_alignParentRight="true" />

</RelativeLayout>